# research-agent

./: README.md
advance-agent/: .env  pyproject.toml
advance-agent/src/: firecrawl.py  workflow.py
simple-agent/: main.py  pyproject.toml
